[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/scripts/ui/popup_confirm.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/popup_cancel_button.png" type="Texture" id=2]
[ext_resource path="res://source/nodes/popup_with_background.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/ui/popup_accept_button.png" type="Texture" id=4]
[ext_resource path="res://source/resources/fonts/digits_small_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://source/resources/fonts/title_font.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PopupConfirm" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="PopupDialog" parent="." index="1"]
popup_exclusive = true

[node name="Label" type="Label" parent="PopupDialog/VBoxContainer" index="0"]
self_modulate = Color( 0.32549, 0.34902, 0.415686, 1 )
margin_top = 48.0
margin_right = 410.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog/VBoxContainer" index="1"]
margin_top = 113.0
margin_right = 410.0
margin_bottom = 295.0
custom_constants/separation = 10

[node name="AcceptButton" type="Button" parent="PopupDialog/VBoxContainer/VBoxContainer" index="0"]
margin_right = 410.0
margin_bottom = 86.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "KEY_CONFIRM"
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="CancelButton" type="Button" parent="PopupDialog/VBoxContainer/VBoxContainer" index="1"]
margin_top = 96.0
margin_right = 410.0
margin_bottom = 182.0
custom_colors/font_color_disabled = Color( 0.32549, 0.34902, 0.415686, 1 )
custom_colors/font_color_focus = Color( 0.32549, 0.34902, 0.415686, 1 )
custom_colors/font_color = Color( 0.32549, 0.34902, 0.415686, 1 )
custom_colors/font_color_hover = Color( 0.32549, 0.34902, 0.415686, 1 )
custom_colors/font_color_pressed = Color( 0.32549, 0.34902, 0.415686, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "KEY_CANCEL"
icon = ExtResource( 2 )
flat = true
icon_align = 1
